# ecsite

./: .gitignore  README.md  docker-compose.yaml  openapi-schema.yml
back/: .env.example  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
back/ecsite/: asgi.py  settings.py  urls.py  views.py  wsgi.py
back/ecsite/management/commands/: confirm_user.py  create_db.py  create_user.py  drop_db.py  setup_dummy copy.py
back/ecsite/settings/: __init__.py  base.py  development.py  production.py
back/src/: apps.py  urls.py  views.py
back/src/auth/authenticator/: cognito_authenticator.py
back/src/auth/decorators/: permission_required.py
back/src/decorators/: permission_required.py
back/src/di/: __init__.py  aws.py
back/src/drivers/: file_uploader.py  user_claim_resolver.py  user_claims_resolver.py
back/src/drivers/aws/: file_uploader.py  user_claim_resolver.py
back/src/entities/: cart.py
back/src/lib/: aws.py
back/src/management/commands/: confirm_user.py  (+3 more)
back/src/middlewares/: cognito_auth_middleware.py
back/src/migrations/: 0001_initial.py  0002_client.py  0003_alter_user_email_alter_user_sub.py
back/src/models/: __init__.py  address.py  admin.py  cart.py  client.py  order.py  product.py  report.py  seler.py  user.py
back/src/repository/: cart_repository.py
back/src/views/: carts.py  products.py  register.py
back/typings/botocore/: __init__.pyi  args.pyi  auth.pyi  awsrequest.pyi  client.pyi  compat.pyi  config.pyi  configloader.pyi  configprovider.pyi  credentials.pyi  discovery.pyi  endpoint.pyi  endpoint_provider.pyi  errorfactory.pyi  eventstream.pyi  exceptions.pyi  handlers.pyi  history.pyi  hooks.pyi  httpchecksum.pyi  httpsession.pyi  loaders.pyi  model.pyi  monitoring.pyi  paginate.pyi  parsers.pyi  regions.pyi  response.pyi  retryhandler.pyi  serialize.pyi  session.pyi  signers.pyi  stub.pyi  tokens.pyi  translate.pyi  utils.pyi  validate.pyi  waiter.pyi
back/typings/django/: __init__.pyi
(+319 files in other folders)
